fix: package json add repository

--- a/package.json
+++ b/package.json
@@ -20,5 +20,9 @@
   },
   "peerDependencies": {
     "vite": ">=2.0.0"
+  },
+  "repository": {
+    "type": "git",
+    "url": "git@github.com:includeios/vite-plugin-template-html.git"
   }
 }
