--- a/package.json
+++ b/package.json
@@ -1,12 +1,20 @@
 {
   "name": "vite-plugin-template-html",
-  "version": "1.0.3",
-  "main": "index.ts",
-  "type": "module",
+  "version": "1.0.4",
+  "main": "dist/index.js",
+  "types": "dist/index.d.ts",
   "keywords": [
-    "vitejs"
+    "vitejs",
+    "vite-plugin"
   ],
-  "author": "includeios",
+  "files": [
+    "dist",
+    "README.md"
+  ],
+  "scripts": {
+    "build": "rm -rf dist && tsc"
+  },
+  "author": "tripod_ding",
   "license": "MIT",
   "repository": {
     "type": "git",
@@ -21,6 +29,10 @@
     "html-minifier-terser": "^7.0.0"
   },
   "devDependencies": {
+    "@types/connect-history-api-fallback": "^1.3.5",
+    "@types/ejs": "^3.1.1",
+    "@types/html-minifier-terser": "^7.0.0",
+    "@types/node": "^18.11.9",
     "typescript": "^4.8.4",
     "vite": "^3.1.8"
   },
