--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,10 +1,18 @@
 {
   "compilerOptions": {
-    "target": "ESNext",
-    "module": "ESNext",
-    "experimentalDecorators": true
+    "target": "ES2020",
+    "moduleResolution": "node",
+    "strict": true,
+    "declaration": true,
+    "noUnusedLocals": true,
+    "esModuleInterop": true,
+    "outDir": "./dist",
+    "module": "commonjs",
+    "sourceMap": true,
+    "allowSyntheticDefaultImports": true
   },
   "exclude": [
     "node_modules",
+    "dist"
   ]
 }
