--- a/package.json
+++ b/package.json
@@ -1,18 +1,26 @@
 {
   "name": "vite-plugin-template-html",
   "version": "1.0.6",
-  "main": "dist/index.js",
-  "types": "dist/index.d.ts",
+  "type": "module",
+  "main": "./dist/index.cjs",
+  "module": "./dist/index.mjs",
+  "types": "./dist/index.d.ts",
+  "exports": {
+    ".": {
+      "types": "./dist/index.d.ts",
+      "import": "./dist/index.mjs",
+      "require": "./dist/index.cjs"
+    }
+  },
   "keywords": [
     "vitejs",
     "vite-plugin"
   ],
   "files": [
-    "dist",
-    "README.md"
+    "dist"
   ],
   "scripts": {
-    "build": "rm -rf dist && tsc"
+    "prepack": "unbuild"
   },
   "author": "tripod_ding",
   "license": "MIT",
@@ -22,19 +30,20 @@
   },
   "homepage": "https://github.com/includeios/vite-plugin-template-html",
   "dependencies": {
-    "@rollup/pluginutils": "^5.0.1",
+    "@rollup/pluginutils": "^5.1.0",
     "colors": "^1.4.0",
-    "connect-history-api-fallback": "^1.6.0",
-    "ejs": "^3.1.8",
-    "html-minifier-terser": "^7.0.0"
+    "connect-history-api-fallback": "^2.0.0",
+    "ejs": "^3.1.10",
+    "html-minifier-terser": "^7.2.0"
   },
   "devDependencies": {
-    "@types/connect-history-api-fallback": "^1.3.5",
-    "@types/ejs": "^3.1.1",
-    "@types/html-minifier-terser": "^7.0.0",
-    "@types/node": "^18.11.9",
-    "typescript": "^4.8.4",
-    "vite": "^5.0.5"
+    "@types/connect-history-api-fallback": "^1.5.4",
+    "@types/ejs": "^3.1.5",
+    "@types/html-minifier-terser": "^7.0.2",
+    "@types/node": "^20.14.15",
+    "typescript": "^5.5.4",
+    "unbuild": "^2.0.0",
+    "vite": "^5.4.0"
   },
   "peerDependencies": {
     "vite": ">=2.0.0"
