--- a/package.json
+++ b/package.json
@@ -20,7 +20,8 @@
     "dist"
   ],
   "scripts": {
-    "prepack": "unbuild"
+    "prepack": "unbuild",
+    "release": "release-it"
   },
   "author": "tripod_ding",
   "license": "MIT",
@@ -37,10 +38,12 @@
     "html-minifier-terser": "^7.2.0"
   },
   "devDependencies": {
+    "@release-it/conventional-changelog": "^8.0.1",
     "@types/connect-history-api-fallback": "^1.5.4",
     "@types/ejs": "^3.1.5",
     "@types/html-minifier-terser": "^7.0.2",
     "@types/node": "^20.14.15",
+    "release-it": "^17.6.0",
     "typescript": "^5.5.4",
     "unbuild": "^2.0.0",
     "vite": "^5.4.0"
